[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "varys"
version = "0.1.0"
description = "A Universal MVP Security Scanner."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "PyGithub",
    "python-dotenv",
    "typer[all]",
    "colorama"  # Optional: For colored terminal output if you add it later
]

[project.scripts]
varys="scanner_file.scanner:main"
# This is the magic line. 
# It says: "When I type 'varys', run the 'app' object inside 'scanner.py'"